Fix weird Safari spacing issues
On full zoom out (25%) layout would shift due to rem changing size,
switched to em for key padding

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -74,7 +74,7 @@ hr {
   background-color: var(--gray-accent-1);
   border: 0;
   height: 1.5px;
-  margin: 2rem 0;
+  margin: 1.25em 0;
 }
 
 img {
@@ -97,7 +97,7 @@ figure figcaption {
 .content {
   max-width: var(--full-width);
   margin: auto;
-  padding: 2rem;
+  padding: 1.25em;
 }
 
 .content code {
@@ -110,8 +110,8 @@ figure figcaption {
 .content pre {
   display: block;
   white-space: pre;
-  margin: 2rem 0;
-  padding: 2rem;
+  margin: 1.25em 0;
+  padding: 1.25em;
   overflow-x: auto;
   word-break: break-all;
   word-wrap: break-word;
@@ -151,7 +151,7 @@ figure figcaption {
 .post-list {
   display: grid;
   row-gap: 0.5rem;
-  margin-right: -3rem;
+  margin-right: -30px;
 }
 
 .post-list > .post-list-info {
@@ -205,7 +205,7 @@ figure figcaption {
   max-width: var(--full-width);
   margin: auto;
   z-index: 999;
-  padding: 2.2rem 2rem 1.6rem 2rem;
+  padding: 1.375em 2rem 1em 2rem;
 }
 
 .navbar-content .navbar-title {
@@ -217,6 +217,7 @@ figure figcaption {
 
 .navbar-content > .navbar-internal-links {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   list-style: none;
@@ -228,6 +229,7 @@ figure figcaption {
 .navbar-content > .navbar-external-links {
   display: flex;
   justify-content: space-between;
+  min-width: calc(1.4em * 3 + 1rem);
 }
 
 .navbar-external-links > .navbar-external-link {
@@ -250,8 +252,8 @@ blockquote,
 .content pre,
 .notice,
 .warning {
-  margin: 2rem 0;
-  padding: 2rem;
+  margin: 1.25em 0;
+  padding: 1.25em;
   border: thin solid var(--gray-accent-1);
   background-color: var(--gray-accent-3);
   border-radius: 3px;
@@ -271,8 +273,8 @@ blockquote p,
   display: block;
   text-align: center;
   position: relative;
-  left: -2rem;
-  top: -2rem;
+  left: -1.25em;
+  top: -1.25em;
   padding: 2px 10px;
   font-weight: bold;
 }
@@ -290,15 +292,15 @@ blockquote p,
 }
 
 #writing {
-  grid-template-columns: 2fr 0.2fr 3rem;
+  grid-template-columns: 2fr 0.2fr 30px;
 }
 
 #reading {
-  grid-template-columns: 1.2fr 0.8fr 0.2fr 3rem;
+  grid-template-columns: 1.2fr 0.8fr 0.2fr 30px;
 }
 
 #talks {
-  grid-template-columns: 1.6125fr 0.3875fr 0.2fr 3rem;
+  grid-template-columns: 1.6125fr 0.3875fr 0.2fr 30px;
 }
 
 /* support for Edge */
@@ -319,7 +321,7 @@ blockquote p,
   }
 
   .post-list > .post-list-date {
-    padding-bottom: 2rem;
+    padding-bottom: 1.25em;
   }
 
   .post-list > .post-list-misc {
